# soma

./: .gitignore  ACKNOWLEDGMENTS.md  ADDITIONAL_TERMS.md  CHANGELOG.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/browser/: AndroidManifest.xml
app/src/cloud/: AndroidManifest.xml
app/src/connected/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
bridge/macos/: README.md  codex-policy.mjs  network-policy.mjs  package-lock.json  package.json  soma-bridge.mjs
bridge/macos/test/: bridge.test.mjs  mock-codex.mjs  (+2 more)
core/: build.gradle.kts
docs/: CODEX_BRIDGE_SECURITY.md  FORMATS.md  INTERACTIONS.md  LIGHT_TOOL.md  PERFORMANCE.md  RELEASE.md  ROADMAP_1_0.md  ROADMAP_2_0.md  THREAT_MODEL.md
docs/screenshots/: README.md
gradle/: libs.versions.toml
ios/: README.md
ios/SomaIOS/: AIClients.swift  AISettings.swift  AudioRecorder.swift  CameraCapture.swift  ContextDocument.swift  Info.plist  Localizable.xcstrings  Models.swift  RootView.swift  SomaAppIntents.swift  SomaBackground.swift  SomaBridge.swift  SomaBridgeViews.swift  SomaCrypto.swift  SomaHealth.swift  SomaIOSApp.swift  SomaIntelligence.swift  SomaLanServer.swift  SomaMetadata.swift  SomaReceipts.swift  SomaReminder.swift  SomaRules.swift  SomaStore.swift  SomaVision.swift
ios/SomaIOS.xcodeproj/: project.pbxproj
lanserver/: build.gradle.kts
media/: build.gradle.kts
storage/: BACKUP_FORMAT.md  build.gradle.kts  consumer-rules.pro
tools/: STT_BENCHMARK.md  benchmark_stt.py  check_apk_permissions.sh  check_no_outbound_clients.sh  generate_eu_food_catalog.py
voice/: build.gradle.kts  consumer-rules.pro
whisper/: build.gradle.kts  consumer-rules.pro
whisper/src/main/cpp/: CMakeLists.txt  soma_whisper_jni.cpp
(+201 files in other folders)
